--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -12,17 +12,21 @@
       padding-top: 30px
     &__search
       margin-left: auto
-      max-width: 340px
     &-menu
       padding-top: 22px
       padding-bottom: 22px
     &__link
       font-size: 12px
       line-height: 15px
+  .search
+    &__input
+      width: 340px
 @media (max-width: 768px)
   .container
     max-width: 576px
     width: 92%
+  .logo
+    width: 99px
   .navbar
     &__search, &-menu, &__user
       display: none
@@ -38,6 +42,7 @@
       align-items: center
       justify-content: space-between
       flex-direction: column
+      padding: 0
       background-color: #fff
       cursor: pointer
       &__line
@@ -45,5 +50,11 @@
         height: 1px
         background-color: $text-color
 @media (max-width: 576px)
+  .container
+    max-width: 320px
   .logo
     width: 99px
+  .navbar
+    &-top
+      padding-top: 28px
+      padding-bottom: 28px
