--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -2,7 +2,7 @@
   background-color: #fffff
   &-top
     display: flex
-    align-item: center
+    align-items: center
     justify-content: space-between
     padding-top: 40px
     padding-bottom: 40px
